src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>AMC_Amount__c</fullName>
        <label>AMC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMC_Created__c</fullName>
        <label>AMC Created</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMC_Status__c</fullName>
        <label>AMC Status</label>
        <picklist>
            <controllingField>Warranty_Status__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMC_Type__c</fullName>
        <label>AMC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Comprehensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent_Name</label>
        <picklist>
            <picklistValues>
                <fullName>MAMTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SATENDRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANOJ TOMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEVIKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAHUL DAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AARTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANUJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POOJA BHARDWAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REKHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMANSHU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANJAY KUMAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAHUL JHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRATHNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIYANKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGAR BISHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHISH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRAMOD BHATT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VINEETA RAWAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANDIP DAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERMJIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAGHU CHAUDHARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARAN SAHNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALBIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJESH VERMA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_FSR_No__c</fullName>
        <label>Alternate FSR No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Status__c</fullName>
        <label>Approval Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Taken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attended_Date_Time__c</fullName>
        <label>Attended Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Total__c</fullName>
        <formula>Component_Charges__c  +  Service_Charges__c  +  Service_Charges_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Battery_Approval_Date__c</fullName>
        <label>Battery Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Cust__c</fullName>
        <formula>Account.BillingStreet + &apos;  &apos; + Account.BillingCity + &apos;  &apos; + Account.BillingState + &apos;  &apos; + Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Cust</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_TYPE__c</fullName>
        <description>FOR DIFFERENTIATE SERVICE REQUEST.</description>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>COMPLAIN END USER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLAIN DEALER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRC REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENERAL VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARE HOUSE REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREE SERVICE CAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT SALE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIN_No__c</fullName>
        <formula>Account.Customer_ID__c</formula>
        <label>CIN No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <formula>Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_State__c</fullName>
        <formula>Contact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Street__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Zip__c</fullName>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Amount__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Battery Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shock problem in inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Bulging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burn Smell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery smells(high fume release)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Workflow</description>
        <label>Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Time__c</fullName>
        <label>Completion Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Bill_No__c</fullName>
        <label>Component Bill No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Charges__c</fullName>
        <label>Component Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Amount__c</fullName>
        <formula>Component_Charges__c  * Component_Tax_Rate_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Rate_1__c</fullName>
        <label>Component Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Rate__c</fullName>
        <formula>12.50/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_No__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF(Account.IsPersonAccount ,Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName , Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_No__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Account.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_No__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Service_Request__c</fullName>
        <label>Estimated Value of Service Request</label>
        <picklist>
            <controllingField>Type_of_Replacement__c</controllingField>
            <picklistValues>
                <fullName>Upto INR 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above INR 50,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSR_No__c</fullName>
        <externalId>true</externalId>
        <label>FSR No.</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSR_Trig__c</fullName>
        <externalId>true</externalId>
        <label>FSR Trig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>(Service_Charges_After_Tax__c  +  Total_Component_Amount_After_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interim_Approval__c</fullName>
        <label>Interim Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_No_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice No. Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Expenses__c</fullName>
        <label>Other Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROBLEM_OBSERVED__c</fullName>
        <description>ACTUAL PROBLEM OBSERVED BY ENGINEER.</description>
        <inlineHelpText>**</inlineHelpText>
        <label>Problem Observed By Engineer</label>
        <picklist>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON MAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINS MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BLOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BROKEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM ON BUT NO OUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM DEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS LOW BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER LOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS SHORT CIRCUIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGING CONTINUSELY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT CHARGING BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY OVERHEATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY DRY RUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTOR BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSIT DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSFORMER BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARD BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGEOVER PROBLEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAN NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOOSE CONNECTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCKET DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIN LEAD FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED DISPLAY NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER TEMPERATURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY LOW BACKUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM GENERATES HUMMING SOUND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Date_for_Visit__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <description>Here we put in the Customer&apos;s preffered Date of Visit by Service Engineer. By Default the value is Case Created Date</description>
        <label>Preferred Date for Visit</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Time__c</fullName>
        <label>Preferred Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Detected__c</fullName>
        <label>Problem Detected (In Brief)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON-LINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Serial_No__c</fullName>
        <label>Product Serial No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>R00N20000001R8w3EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_City__c</fullName>
        <label>Purchase City</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Country__c</fullName>
        <label>Purchase Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Date Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Invoice_No__c</fullName>
        <label>Purchase Invoice No.</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_State__c</fullName>
        <label>Purchase State</label>
        <picklist>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receiving_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Receiving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Visit_Date_Time__c</fullName>
        <label>Recommended Visit Date / Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>$User.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFFLAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_No_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serial No. Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Bill_No__c</fullName>
        <label>Service Bill No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Centre_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used by the Call Centre user to select the Service Centre City</description>
        <label>Service Centre City</label>
        <referenceTo>Service_Centre_City__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Centre_Contact_No__c</fullName>
        <formula>VALUE (  Service_Engineer_Assigned__r.Related_to_Service_Center__r.Telephone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Centre Contact No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Type__c</fullName>
        <label>Service Charge Type</label>
        <picklist>
            <controllingField>AMC_Status__c</controllingField>
            <picklistValues>
                <fullName>Carry In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Charges_After_Tax__c</fullName>
        <formula>( (Service_Charges__c +  Service_Charges_Other__c ) * (1+ Service_Tax_Rate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Charges(After Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charges_Other__c</fullName>
        <label>Service Charges (Other)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charges__c</fullName>
        <label>Service Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Engineer Assigned</label>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>R00N20000001R8wrEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Code__c</fullName>
        <formula>Service_Engineer_Assigned__r.Employee_Code__c</formula>
        <label>Service Engineer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Id__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Engineer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Location_Code__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Center_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Mobile_No__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Engineer_Mobile_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Name__c</fullName>
        <label>Service Engineer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Attended_Date__c</fullName>
        <label>Service Request Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount__c</fullName>
        <formula>((Service_Charges__c + Service_Charges_Other__c ) *  Service_Tax_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>